force-app/main/default/objects/Address__c/fields/AddressUniqueKey__c.field-meta.xml
<CustomField>
    <fullName>AddressUniqueKey__c</fullName>
    <description>Concatenation of address fields and geocoding, enforces uniqueness of address records.</description>
    <externalId>true</externalId>
    <label>AddressUniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>