force-app/main/default/objects/Address__c/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <description>Name of the addresses building</description>
    <label>Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>