force-app/main/default/objects/Address__c/fields/Care_of__c.field-meta.xml
<CustomField>
    <fullName>Care_of__c</fullName>
    <label>Care of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>