force-app/main/default/objects/Address__c/fields/CGIS_Override__c.field-meta.xml
<CustomField>
    <fullName>CGIS_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>History that indicates that a user replaced CGIS Geospatial Information with manual override.</description>
    <label>CGIS Override</label>
    <type>Checkbox</type>
</CustomField>