force-app/main/default/objects/Address__c/fields/Full_Street__c.field-meta.xml
<CustomField>
    <fullName>Full_Street__c</fullName>
    <description>Concatenates the street number, street, and street type</description>
    <formula>IF(ISBLANK( Street_Number_1__c ) = FALSE, Street_Number_1__c &amp; &apos; &apos;, &quot;&quot;)&amp;&apos;&apos;&amp;
IF(ISBLANK( Street__c ) = FALSE, Street__c &amp; &apos; &apos;, &quot;&quot;)&amp;&apos;&apos;&amp;
IF(ISPICKVAL( Street_Type_Description__c , &quot;&quot;) = FALSE, TEXT(Street_Type_Description__c ), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Street</label>
    <type>Text</type>
</CustomField>