force-app/main/default/objects/Address__c/fields/gnaf_pid__c.field-meta.xml
<CustomField>
    <fullName>gnaf_pid__c</fullName>
    <description>ID for gnaf_pid</description>
    <label>gnaf pid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>