force-app/main/default/objects/Address__c/fields/GPMS_Long_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Long_Address_Line_2__c</fullName>
    <description>Input the address</description>
    <label>Long Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>