force-app/main/default/objects/Address__c/fields/Layer_Id_String__c.field-meta.xml
<CustomField>
    <fullName>Layer_Id_String__c</fullName>
    <defaultValue>&quot;0|1|2|3|4|5|6|7|8|9|10|11|12&quot;</defaultValue>
    <label>Layer Id String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>