force-app/main/default/objects/Address__c/fields/Level_Number__c.field-meta.xml
<CustomField>
    <fullName>Level_Number__c</fullName>
    <description>Level Number</description>
    <label>Level Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>