force-app/main/default/objects/Address__c/fields/Level_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_Type_Description__c</fullName>
    <description>Level Type Description</description>
    <label>Level Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FLOOR</fullName>
            </value>
            <value>
                <fullName>LEVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>