force-app/main/default/objects/Address__c/fields/Oracle_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Address_ID__c</fullName>
    <externalId>true</externalId>
    <label>Oracle Address ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>