force-app/main/default/objects/Address__c/fields/PO_BOX_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_BOX_Type__c</fullName>
    <description>PO BOX Type</description>
    <label>PO BOX Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMB</fullName>
            </value>
            <value>
                <fullName>GPO Box</fullName>
            </value>
            <value>
                <fullName>Locked Bag</fullName>
            </value>
            <value>
                <fullName>PO Box</fullName>
            </value>
            <value>
                <fullName>Private Bag</fullName>
            </value>
            <value>
                <fullName>Private Box</fullName>
            </value>
            <value>
                <fullName>RMB</fullName>
            </value>
            <value>
                <fullName>RSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>