force-app/main/default/objects/Address__c/fields/Street_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_1__c</fullName>
    <description>Address Street Number 1</description>
    <label>Street Number 1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>