force-app/main/default/objects/Address__c/fields/Street_Suffix_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Street_Suffix_Type_Description__c</fullName>
    <description>Street Suffix Type Description</description>
    <label>Street Suffix Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORTH WEST</fullName>
            </value>
            <value>
                <fullName>CENTRAL</fullName>
            </value>
            <value>
                <fullName>EAST</fullName>
            </value>
            <value>
                <fullName>EXTENSION</fullName>
            </value>
            <value>
                <fullName>LOWER</fullName>
            </value>
            <value>
                <fullName>NORTH</fullName>
            </value>
            <value>
                <fullName>NORTH EAST</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
            <value>
                <fullName>SOUTH EAST</fullName>
            </value>
            <value>
                <fullName>SOUTH WEST</fullName>
            </value>
            <value>
                <fullName>UPPER</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>