force-app/main/default/objects/Address__c/fields/Street_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Street_Type_Description__c</fullName>
    <label>Street Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCESS</fullName>
            </value>
            <value>
                <fullName>ALLEY</fullName>
            </value>
            <value>
                <fullName>ALLEYWAY</fullName>
            </value>
            <value>
                <fullName>AMBLE</fullName>
            </value>
            <value>
                <fullName>APPROACH</fullName>
            </value>
            <value>
                <fullName>ARCADE</fullName>
            </value>
            <value>
                <fullName>ARTERIAL</fullName>
            </value>
            <value>
                <fullName>ARTERY</fullName>
            </value>
            <value>
                <fullName>AVENUE</fullName>
            </value>
            <value>
                <fullName>BANAN</fullName>
            </value>
            <value>
                <fullName>BEACH</fullName>
            </value>
            <value>
                <fullName>BEND</fullName>
            </value>
            <value>
                <fullName>BOARDWALK</fullName>
            </value>
            <value>
                <fullName>BOULEVARD</fullName>
            </value>
            <value>
                <fullName>BRACE</fullName>
            </value>
            <value>
                <fullName>BRAE</fullName>
            </value>
            <value>
                <fullName>BREAK</fullName>
            </value>
            <value>
                <fullName>BROW</fullName>
            </value>
            <value>
                <fullName>BYPASS</fullName>
            </value>
            <value>
                <fullName>BYWAY</fullName>
            </value>
            <value>
                <fullName>CAUSEWAY</fullName>
            </value>
            <value>
                <fullName>CENTRE</fullName>
            </value>
            <value>
                <fullName>CHASE</fullName>
            </value>
            <value>
                <fullName>CIRCLE</fullName>
            </value>
            <value>
                <fullName>CIRCUIT</fullName>
            </value>
            <value>
                <fullName>CIRCUS</fullName>
            </value>
            <value>
                <fullName>CLOSE</fullName>
            </value>
            <value>
                <fullName>CONCOURSE</fullName>
            </value>
            <value>
                <fullName>COPSE</fullName>
            </value>
            <value>
                <fullName>CORNER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>