force-app/main/default/objects/Address__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Unit Number</description>
    <label>Unit Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>