force-app/main/default/objects/Address__c/fields/Unit_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_Description__c</fullName>
    <description>Unit Type Description</description>
    <label>Unit Type Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APARTMENT NUMBER</fullName>
            </value>
            <value>
                <fullName>FLAT</fullName>
            </value>
            <value>
                <fullName>OFFICE</fullName>
            </value>
            <value>
                <fullName>ROOM</fullName>
            </value>
            <value>
                <fullName>SHOP</fullName>
            </value>
            <value>
                <fullName>SUITE</fullName>
            </value>
            <value>
                <fullName>UNIT</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>